Prompts User if they like what their trip is and reloads page if they say no.

--- a/day_trip.html
+++ b/day_trip.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>DayTrip</title>title></title>
+        <title>DayTrip</title>DayTrip></title>
     </head>
     <body>
         <script type="text/javascript" src="day_trip.js"></script>
